--- a/src/Card.css
+++ b/src/Card.css
@@ -5,16 +5,18 @@
   width: 200px;
   font-family: 'Raleway', sans-serif;
   box-sizing: border-box;
-  box-shadow: 4px 4px 2px #aeaeae;
+  box-shadow: 4px 4px 2px #3d5730;
+  background-color: #fff;
 }
 
 .card:hover {
-  box-shadow: 6px 6px 4px #888888;
+  box-shadow: 6px 6px 4px black;
 }
 
 .selected {
   width: 200px;
-  border-color: red;
+  border: solid 3px black;
+
 }
 
 .card-heading {
@@ -38,7 +40,7 @@
 }
 
 .greater-than {
-  color: #0095A9;
+  color: #3d5730;
   font-weight: 600;
 }
 
